// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 should render correctly 1`] = `
<DocumentFragment>
  <h1
    class="h1 alignLeft singleLine"
  >
    This is H1
  </h1>
</DocumentFragment>
`;

exports[`H1 should render correctly with \`as\` 1`] = `
<DocumentFragment>
  <p
    class="h1 alignLeft singleLine"
  >
    This is a p
  </p>
</DocumentFragment>
`;
